@@ -29,7 +29,8 @@ threads
     ``4``
 
 url_scheme
-    default ``wsgi.url_scheme`` value (string), default ``http``
+    default ``wsgi.url_scheme`` value (string), default ``http``;  can be
+    overridden per-request by the value of the ``X_WSGI_URL_SCHEME`` header.
 
 ident
     server identity (string) used in "Server:" header in responses, default
