@@ -119,12 +119,16 @@ which start with ``https://``), the URLs generated by your application when
 used behind a reverse proxy served by Waitress might inappropriately be
 ``http://foo`` rather than ``https://foo``.  To fix this, you'll want to
 change the ``wsgi.url_scheme`` in the WSGI environment before it reaches your
-application.  You can do this in one of two ways:
+application.  You can do this in one of three ways:
 
 1.  You can pass a ``url_scheme`` configuration variable to the
     ``waitress.serve`` function.
 
-2.  You can use Paste's ``PrefixMiddleware`` in conjunction with
+2.  You can configure the proxy reverse server to pass a header,
+    ``X_WSGI_URL_SCHEME``, whose value will be set for that request as
+    the ``wsgi.url_scheme`` environment value.
+
+3.  You can use Paste's ``PrefixMiddleware`` in conjunction with
     configuration settings on the reverse proxy server.
 
 Using ``url_scheme`` to set ``wsgi.url_scheme``
@@ -137,6 +141,20 @@ You can have the Waitress server use the ``https`` url scheme by default.::
 
 This works if all URLs generated by your application should use the ``https``
 scheme.
+
+Passing the ``X_WSGI_URL_SCHEME`` header to set ``wsgi.url_scheme``
+-------------------------------------------------------------------
+
+If your proxy accepts both HTTP and HTTPS URLs, and you want your application
+to generate the appropriate url based on the incoming scheme, also set up
+your proxy to send a ``X-WSGI-Scheme`` with the original URL scheme along
+with each proxied request.  For example, when using Nginx::
+
+    proxy_set_header        X-WSGI-Scheme $scheme;
+
+or via Apache::
+
+   RequestHeader set X-WSGI-Scheme https
 
 Using ``url_prefix`` to influence ``SCRIPT_NAME`` and ``PATH_INFO``
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
